--- a/language/language-configuration.json
+++ b/language/language-configuration.json
@@ -1,8 +1,6 @@
 {
     "comments": {
-        "lineComment": {
-            "comment": "%"
-        }
+        "lineComment": "%"
     },
     "brackets": [
         ["(",")"],
