enhance debugging capabilities with new error handling, and improve language configuration. Added support for new syntax elements and refined document symbol management.

--- a/language/language-configuration.json
+++ b/language/language-configuration.json
@@ -6,9 +6,11 @@
         ["(",")"],
         ["[","]"],
         ["{","}"],
+        ["mark","]"],
         ["<",">"],
         ["<~","~>"],
-        ["<<",">>"]
+        ["<<",">>"],
+        ["mark",">>"]
     ],
     "autoClosingPairs": [
         ["(",")"],
@@ -21,6 +23,8 @@
     "surroundingPairs": [
         ["(",")"],
         ["[","]"],
+        ["mark","]"],
+        ["mark",">>"],
         ["{","}"],
         ["~","~"],
         ["<",">"]
